apps/auth/argocd/base/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ui
  name: ui-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ui
    spec:
      containers:
      - image: sjc.vultrcr.com/nx-playground/ssoui:v1.0.0
        name: ui
        livenessProbe:
          httpGet:
            path: /__health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
        readinessProbe:
          httpGet:
            path: /__health
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 6
