apps/auth/argocd/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui
spec:
  selector:
      app: ui
  ports:
    - name: http-product
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: http-staging
      port: 8081
      targetPort: 8081
      protocol: TCP
